--- a/src/checklist.html
+++ b/src/checklist.html
@@ -10,21 +10,12 @@
             <li><a href="checklist.html">Checklist</a></li>
         </ul>
 
-        <h1>Todo Lists</h1>
+        <h1>Checklist</h1>
+
         <table>
-            <tr>
-            <th>Title</th>
-            <th>Description</th>
-            <th>Due date</th>
-            <th>Priority</th>
-        </tr>
-        <tr>
-            <td>Title</td>
-            <td>Description</td>
-            <td>Due date</td>
-            <td>Priority</td>
-        </tr>
+            
         </table>
+
 
         <script src="index.js"></script>
     </body>
