--- a/src/note.html
+++ b/src/note.html
@@ -10,21 +10,8 @@
             <li><a href="checklist.html">Checklist</a></li>
         </ul>
 
-        <h1>Todo Lists</h1>
-        <table>
-            <tr>
-            <th>Title</th>
-            <th>Description</th>
-            <th>Due date</th>
-            <th>Priority</th>
-        </tr>
-        <tr>
-            <td>Title</td>
-            <td>Description</td>
-            <td>Due date</td>
-            <td>Priority</td>
-        </tr>
-        </table>
+        <h1>Notes</h1>
+
 
         <script src="index.js"></script>
     </body>
