--- a/src/note.html
+++ b/src/note.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="note.css">
     </head>
     <body>
         <ul>
@@ -12,7 +12,17 @@
 
         <h1>Notes</h1>
 
+        <button id="add-note">Add</button>
 
-        <script src="index.js"></script>
+        <div class="container">
+            <div class="item">Do laundry</div>
+            <div class="item">Go to the gym</div>
+            <div class="item">Finish project</div>
+            <div class="item">Do the dishes</div>
+            <div class="item">Do the dishes</div>
+
+        </div>
+
+        <script src="note.js"></script>
     </body>
 </html>
