--- a/src/checklist.html
+++ b/src/checklist.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="checklist.css">
+        <title>Checklist</title>
+
     </head>
     <body>
-        <ul>
+        <ul id="side-bar">
             <li><a href="index.html">Todo Lists</a></li>
             <li><a href="note.html">Note</a></li>
             <li><a href="checklist.html">Checklist</a></li>
         </ul>
 
         <h1>Checklist</h1>
+        <button id="add-item">Add</button>
 
-        <table>
-            
-        </table>
+        <ul id="checkbox">
+            <li class="item"><input type="checkbox">Sugar</li>
+            <li class="item"><input type="checkbox">Pizza</li>
+            <li class="item"><input type="checkbox">Salt</li>
+            <li class="item"><input type="checkbox">Tomato</li>
+            <li class="item"><input type="checkbox">Porridge</li>
 
+        </ul>
 
-        <script src="index.js"></script>
+        <script src="checklist.js"></script>
     </body>
 </html>
