--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <title>Todo List</title>
     </head>
     <body>
         <ul>
