--- a/src/note.html
+++ b/src/note.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="note.css">
+        <title>Take note here!!</title>
+
     </head>
     <body>
         <ul>
