finished checklist, with delete all button as well

--- a/src/checklist.html
+++ b/src/checklist.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en">
         <link rel="stylesheet" href="checklist.css">
         <title>Checklist</title>
 
@@ -14,13 +14,14 @@
 
         <h1>Checklist</h1>
         <button id="add-item">Add</button>
+        <button id="clear-item">Clear</button>
 
         <ul id="checkbox">
-            <li class="item"><input type="checkbox">Sugar</li>
+            <!-- <li class="item"><input type="checkbox">Sugar</li>
             <li class="item"><input type="checkbox">Pizza</li>
             <li class="item"><input type="checkbox">Salt</li>
             <li class="item"><input type="checkbox">Tomato</li>
-            <li class="item"><input type="checkbox">Porridge</li>
+            <li class="item"><input type="checkbox">Porridge</li> -->
 
         </ul>
 
