--- a/src/note.html
+++ b/src/note.html
@@ -15,14 +15,10 @@
         <h1>Notes</h1>
 
         <button id="add-note">Add</button>
+        <button id="clear-note">Clear</button>
 
         <div class="container">
-            <div class="item">Do laundry</div>
-            <div class="item">Go to the gym</div>
-            <div class="item">Finish project</div>
-            <div class="item">Do the dishes</div>
-            <div class="item">Do the dishes</div>
-
+            <!-- input here -->
         </div>
 
         <script src="note.js"></script>
